--- a/host_vars/dumbledore.yml
+++ b/host_vars/dumbledore.yml
@@ -1,3 +1,6 @@
+ansible_password: "{{ inventoryPasswords.dumbledore }}"
+ansible_sudo_pass: "{{ inventoryPasswords.dumbledore }}"
+
 pironman_tools_directory: /home/albus/pironman
 
 vector_config_directory: /home/albus/app_config/vector
