--- a/host_vars/room_of_requirement.yml
+++ b/host_vars/room_of_requirement.yml
@@ -1,3 +1,6 @@
+ansible_password: "{{ inventoryPasswords.room_of_requirement }}"
+ansible_sudo_pass: "{{ inventoryPasswords.room_of_requirement }}"
+
 host_puid: "1000"
 host_pgid: "100"
 
