--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,5 +3,5 @@ roles_path = roles
 collections_path = ./
 inventory = ./inventory.yml
 show_custom_stats = yes
-# vault_password_file = vault_pass.txt
+vault_password_file = vault_pass.txt
 host_key_checking = False
