--- a/playbooks/semaphore/main.yml
+++ b/playbooks/semaphore/main.yml
@@ -49,5 +49,5 @@
 - name: Traefik configuration for semaphore
   hosts: bananapi
   roles:
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'semaphore.yml'
