--- a/playbooks/base_app_infra/004_reverse_proxy.yml
+++ b/playbooks/base_app_infra/004_reverse_proxy.yml
@@ -4,5 +4,5 @@
     - role: abbottland.ingress.traefik
       traefik_cloudflare_token: "{{ cloudflare.token }}"
 
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'pihole.local.yml'
