--- a/playbooks/code-server/main.yml
+++ b/playbooks/code-server/main.yml
@@ -36,5 +36,5 @@
 - name: Traefik configuration for code server
   hosts: bananapi
   roles:
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'code.local.yml'
