--- a/playbooks/dashy/main.yml
+++ b/playbooks/dashy/main.yml
@@ -57,5 +57,5 @@
 - name: Traefik configuration for dashboard
   hosts: bananapi
   roles:
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'dashboard.local.yml'
