--- a/playbooks/docker_registry/main.yml
+++ b/playbooks/docker_registry/main.yml
@@ -1,7 +1,7 @@
 - name: Traefik configuration for registry and registry mirror
   hosts: bananapi
   roles:
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'registry.nas.local.yml'
 
 - name: Setup Docker Registry on NAS
