--- a/playbooks/drone/main.yml
+++ b/playbooks/drone/main.yml
@@ -18,5 +18,5 @@
 - name: Traefik configuration for drone
   hosts: bananapi
   roles:
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'drone.yml'
