--- a/playbooks/grafana_loki/main.yml
+++ b/playbooks/grafana_loki/main.yml
@@ -15,7 +15,7 @@
 - name: Traefik configuration for drone
   hosts: bananapi
   roles:
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'grafana.nas.local.yml'
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'loki.nas.local.yml'
