--- a/playbooks/npm_registry/main.yml
+++ b/playbooks/npm_registry/main.yml
@@ -8,7 +8,7 @@
 - name: Traefik configuration for verdaccio
   hosts: bananapi
   roles:
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'verdaccio.nas.local.yml'
 
 - name: Get Verdaccio Token
