--- a/playbooks/portainer/main.yml
+++ b/playbooks/portainer/main.yml
@@ -29,9 +29,9 @@
 - name: Traefik configuration for portainer
   hosts: bananapi
   roles:
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'portainer.rpi.local.yml'
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'portainer.bananapi.local.yml'
-    - role: abbottland.ingress.traefik_app
+    - role: home.traefik_app
       traefik_app_file_name: 'portainer.dumbledore.local.yml'
