--- a/playbooks/prometheus/main.yml
+++ b/playbooks/prometheus/main.yml
@@ -46,5 +46,5 @@
 - name: Traefik configuration for prometheus
   hosts: bananapi
   roles:
-  - role: abbottland.ingress.traefik_app
+  - role: home.traefik_app
     traefik_app_file_name: 'prometheus.nas.local.yml'
