--- a/playbooks/semaphore/main.yml
+++ b/playbooks/semaphore/main.yml
@@ -5,7 +5,6 @@
       ansible.builtin.file:
         path: "{{ semaphore_postgres_data_dir }}"
         state: directory
-        mode: '0755'
     - name: Get semaphore up-and-running with docker-compose
       community.docker.docker_compose:
         project_name: semaphore
@@ -24,7 +23,8 @@
                 POSTGRES_DB: semaphore
             semaphore:
               container_name: semaphore
-              image: semaphoreui/semaphore:latest
+              # image: semaphoreui/semaphore:latest
+              image: registry.nas.local.abbottland.io/semaphore:0.0.2-semaphore
               restart: always
               ports:
                 - 3001:3000
