Add abbottland collection debug playbook

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 roles_path = ./roles
-collections_path = ./collections
+collections_path = ./
 inventory = ./inventory.yml
 show_custom_stats = yes
 vault_password_file = vault_pass.txt
