Add collections requirements to docker build

--- a/ansible_collections/requirements.yml
+++ b/ansible_collections/requirements.yml
@@ -1,5 +1,5 @@
 collections:
-  - community.crypto
-  - geerlingguy.mac
-  - ansible.posix
   - prometheus.prometheus
+  # - community.crypto
+  # - geerlingguy.mac
+  # - ansible.posix
