Add become statement to host updates

--- a/playbooks/host_updates/pi.yml
+++ b/playbooks/host_updates/pi.yml
@@ -1,7 +1,9 @@
 
 - name: Update apt packages
+  become: true
   hosts:
     - dumbledore
+    - bananapi
   tasks:
     - name: Update apt packages
       apt:
