--- a/playbooks/semaphore/main.yml
+++ b/playbooks/semaphore/main.yml
@@ -18,6 +18,7 @@
               volumes:
                 - "{{ semaphore_postgres_data_dir }}:/var/lib/postgresql/data"
               environment:
+                TZ: "{{ host_tz }}"
                 POSTGRES_USER: semaphore
                 POSTGRES_PASSWORD: "{{ semaphore.postgres.password }}"
                 POSTGRES_DB: semaphore
@@ -31,6 +32,7 @@
               depends_on:
                 - postgres
               environment:
+                TZ: "{{ host_tz }}"
                 SEMAPHORE_DB: semaphore
                 SEMAPHORE_DB_DIALECT: postgres
                 SEMAPHORE_DB_PORT: 5432
