--- a/playbooks/semaphore/main.yml
+++ b/playbooks/semaphore/main.yml
@@ -13,7 +13,7 @@
           services:
             postgres:
               restart: unless-stopped
-              image: postgres:latest
+              image: "{{ semaphore_postgres_docker_image }}"
               hostname: postgres
               volumes:
                 - "{{ semaphore_postgres_data_dir }}:/var/lib/postgresql/data"
@@ -53,3 +53,10 @@
   roles:
     - role: home.traefik_app
       traefik_app_file_name: 'semaphore.yml'
+
+- name: Diun configuration for semaphore postgres
+  hosts: dumbledore
+  roles:
+    - role: home.diun_file
+      diun_file_name: 'semphore_postgres.yml'
+      diun_watch_image: "{{ semaphore_postgres_docker_image }}"
