Attempt to change semaphore tags

--- a/.drone.yml
+++ b/.drone.yml
@@ -48,6 +48,8 @@ steps:
         from_secret: REGISTRY_PASSWORD
       mirror: https://registry-mirror.nas.local.abbottland.io
       repo: registry.nas.local.abbottland.io/semaphore
-      auto_tag: true
+      tags:
+        - latest
+        - "${DRONE_TAG##v}"
       dockerfile: ./Dockerfile
       context: ./
