Ensure semaphore dockerfile is monitored with diun

--- a/playbooks/semaphore/main.yml
+++ b/playbooks/semaphore/main.yml
@@ -54,9 +54,14 @@
     - role: home.traefik_app
       traefik_app_file_name: 'semaphore.yml'
 
-- name: Diun configuration for semaphore postgres
+- name: Diun configuration for semaphore and postgres
   hosts: dumbledore
   roles:
     - role: home.diun_file
       diun_file_name: 'semphore_postgres.yml'
       diun_watch_image: "{{ semaphore_postgres_docker_image }}"
+  tasks:
+    - name: Copy Dockerfile to remote
+      ansible.builtin.copy:
+        src: ./files/Dockerfile
+        dest: "{{ diun_dynamic_config_dir }}/semaphore.Dockerfile"
