--- a/.drone.yml
+++ b/.drone.yml
@@ -51,5 +51,5 @@ steps:
       tags:
         - latest
         - "${DRONE_TAG##v}"
-      dockerfile: ./Dockerfile
+      dockerfile: ./playbooks/semaphore/files/Dockerfile
       context: ./
