--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -4,11 +4,11 @@ host_tz: "America/Chicago"
 docker_registry_username: "{{dockerRegistry.username}}"
 docker_registry_password: "{{dockerRegistry.password}}"
 
-docker_registry_host: https://registry.nas.local.abbottland.io
+docker_registry_host: registry.nas.local.abbottland.io
 docker_registry_port: 5000
 docker_registry_ui_port: 5001
 
-docker_registry_mirror_host: https://registry-mirror.nas.local.abbottland.io
+docker_registry_mirror_host: registry-mirror.nas.local.abbottland.io
 docker_registry_mirror_port: 5002
 docker_registry_mirror_ui_port: 5003
 
