--- a/roles/home.diun_file/meta/argument_specs.yml
+++ b/roles/home.diun_file/meta/argument_specs.yml
@@ -13,3 +13,7 @@ argument_specs:
         type: "str"
         description: "The name of the image to be watched"
         requried: true
+      diun_registry_name:
+        type: "str"
+        description: "The name of the registry to use as per diun configuration"
+        required: false
