--- a/playbooks/docker_cleanup/main.yml
+++ b/playbooks/docker_cleanup/main.yml
@@ -9,15 +9,27 @@
   handlers:
     - name: Notify Prune Complete
       community.general.pushover:
+        title: "Success!"
+        pri: -1
         msg: '{{ inventory_hostname }} completed docker system prune'
         app_token: "{{ pushover.app_token }}"
         user_key: "{{ pushover.user_key }}"
   tasks:
-    - name: Prune everything
-      notify: Notify Prune Complete
-      community.docker.docker_prune:
-        containers: true
-        images: true
-        networks: true
-        volumes: true
-        builder_cache: true
+    - name: Docker Cleanup
+      block:
+        - name: Prune everything
+          notify: Notify Prune Complete
+          community.docker.docker_prune:
+            containers: true
+            images: true
+            networks: true
+            volumes: true
+            builder_cache: true
+      rescue:
+        - name: Notify Prune Failure
+          community.general.pushover:
+            title: "Error!"
+            pri: 1
+            msg: '{{ inventory_hostname }} failed docker system prune'
+            app_token: "{{ pushover.app_token }}"
+            user_key: "{{ pushover.user_key }}"
