--- a/host_vars/room_of_requirement.yml
+++ b/host_vars/room_of_requirement.yml
@@ -6,7 +6,7 @@ host_pgid: "100"
 
 pip_install_packages:
   - pyyaml==5.3.1
-  - docker
+  - docker==6.1.3
   - docker-compose
   - passlib
   - requests==2.28.1
