feat: add docker socket to uptime kuma

--- a/playbooks/uptime_kuma/main.yml
+++ b/playbooks/uptime_kuma/main.yml
@@ -19,6 +19,7 @@
                 - 3002:3001
               volumes:
                 - "{{ uptime_kuma_data_dir }}:/app/data"
+                - /var/run/docker.sock:/var/run/docker.sock:ro
               environment:
                 TZ: "{{ host_tz }}"
                 PGTZ: "{{ host_tz }}"
