--- a/playbooks/base_app_infra/003_dns.yml
+++ b/playbooks/base_app_infra/003_dns.yml
@@ -17,10 +17,10 @@
     - role: abbottland.dns.pihole
     - role: abbottland.dns.cloudflare_ddns
 
-# TODO: consider adding resolver to room_of_requirement
-- name: DNS Resolvers
-  hosts:
-    - web_servers
-  become: true
-  roles:
-    - role: abbottland.dns.dns_resolver
+# TODO: consider adding DNS resolver to room_of_requirement?
+# - name: DNS Resolvers
+#   hosts:
+#     - web_servers
+#   become: true
+#   roles:
+#     - role: abbottland.dns.dns_resolver
