--- a/playbooks/base_app_infra/004_reverse_proxy.yml
+++ b/playbooks/base_app_infra/004_reverse_proxy.yml
@@ -6,3 +6,6 @@
 
     - role: home.traefik_app
       traefik_app_file_name: 'pihole.local.yml'
+
+    - role: home.traefik_app
+      traefik_app_file_name: 'proxmox.local.yml'
