--- a/inventory.yml
+++ b/inventory.yml
@@ -3,6 +3,13 @@ all:
   children:
     remote:
       children:
+        kubernetes_servers:
+          hosts:
+            kubernetes_controller:
+              ansible_host: 192.168.4.175
+              ansible_user: firebolt
+              ansible_password: "{{ inventoryPasswords.kubernetes_controller }}"
+              ansible_sudo_pass: "{{ inventoryPasswords.kubernetes_controller }}"
         web_servers:
           hosts:
             bananapi:
