--- a/playbooks/kubernetes/main.yml
+++ b/playbooks/kubernetes/main.yml
@@ -1,4 +1,6 @@
+- import_playbook: ./000_qemu.yml
+- import_playbook: ./000_timezone.yml
 - import_playbook: ./001_containerd.yml
-- import_playbook: ./002_host_changes.yml
+- import_playbook: ./002_host_prep.yml
 - import_playbook: ./003_kube_tools.yml
 - import_playbook: ./004_kubelet.yml
