--- a/playbooks/kubernetes/004_kubelet.yml
+++ b/playbooks/kubernetes/004_kubelet.yml
@@ -27,9 +27,18 @@
       debug:
         msg: "Token on host is {{ init_token }}"
 
-    - name: kubeadm init
+    - name: Initialize controller
       when: not kubernetes_initialized.stat.exists
-      ansible.builtin.command: "kubeadm init --token {{init_token.stdout}} --pod-network-cidr=10.244.0.0/16"
+      block:
+        - name: Copy kubeadm-config.yml
+          vars:
+            bootstrap_token: "{{ init_token.stdout }}"
+          template:
+            src: ./files/kubeadm-config.yml.j2
+            dest: /tmp/kubeadm-config.yml
+
+        - name: kubeadm init
+          ansible.builtin.command: "kubeadm init --config /tmp/kubeadm-config.yml"
 
     - name: Get certificate hash
       register: cert_hash
@@ -55,7 +64,6 @@
 - name: Install pod overlay
   hosts:
     - kubernetes_controller
-  handlers:
 
   tasks:
     - name: Download helm chart
@@ -70,7 +78,7 @@
       register: helm_info
 
     - name: install calico
-      when: helm_info.status.status != 'deployed'
+      when: (helm_info.status.status | default('')) != 'deployed'
       block:
         - name: Copy values.yml
           ansible.builtin.copy:
@@ -119,39 +127,3 @@
       ansible.builtin.systemd_service:
         name: containerd
         state: restarted
-
-
-
-
-    # - name: Download tigera-operator.yaml
-    #   ansible.builtin.get_url:
-    #     url: https://raw.githubusercontent.com/projectcalico/calico/v3.27.3/manifests/tigera-operator.yaml
-    #     dest: "/tmp/tigera-operator.yaml"
-    #     force: yes
-    # - name: Apply tigera-operator.yaml
-    #   kubernetes.core.k8s:
-    #     state: present
-    #     src: "/tmp/tigera-operator.yaml"
-
-    # - name: Copy custom-resources.yaml
-    #   ansible.builtin.copy:
-    #     src: ./files/custom-resources.yaml
-    #     dest: /tmp/custom-resources.yaml
-    # - name: Apply custom-resources.yaml
-    #   kubernetes.core.k8s:
-    #     state: present
-    #     src: "/tmp/custom-resources.yaml"
-
-  # - name: Download kube-flannel.yml
-  #   ansible.builtin.get_url:
-  #     url: https://github.com/flannel-io/flannel/releases/latest/download/kube-flannel.yml
-  #     dest: "/tmp/kube-flannel.yml"
-  #     force: yes
-  # - name: Apply kube-flannel.yml
-  #   kubernetes.core.k8s:
-  #     state: present
-  #     src: "/tmp/kube-flannel.yml"
-
-# TODO: bring down the bridge if flannel changed
-# sudo ip link delete cni0 type bridge
-# TODO: may need to restart coredns ?
