Re-arrange dns and traefik playbook out of collections

--- a/playbooks/base_app_infra/main.yml
+++ b/playbooks/base_app_infra/main.yml
@@ -1,4 +1,4 @@
 - import_playbook: ./001_docker.yml
 - import_playbook: ./002_host_installs.yml
-- import_playbook: ./003_dns.yml
-- import_playbook: ./004_reverse_proxy.yml
+- import_playbook: ../pihole_dns/main.yml
+- import_playbook: ../traefik/main.yml
