--- a/inventory.yml
+++ b/inventory.yml
@@ -31,11 +31,11 @@ all:
               ansible_user: pi
               ansible_password: "{{ inventoryPasswords.bananapi }}"
               ansible_sudo_pass: "{{ inventoryPasswords.bananapi }}"
-            dumbledore:
-              ansible_host: 192.168.4.157
-              ansible_user: albus
-              ansible_password: "{{ inventoryPasswords.dumbledore }}"
-              ansible_sudo_pass: "{{ inventoryPasswords.dumbledore }}"
+            # dumbledore:
+            #   ansible_host: 192.168.4.157
+            #   ansible_user: albus
+            #   ansible_password: "{{ inventoryPasswords.dumbledore }}"
+            #   ansible_sudo_pass: "{{ inventoryPasswords.dumbledore }}"
       hosts:
         phoenix:
           ansible_host: 192.168.4.170
